# mex_profiler

./: .gitignore  CMakeLists.txt  LICENSE  readme.md
data/: test.mat
src/: main.cpp
